🚪🚂 Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -1,53 +1,39 @@
 {
-  "name": "botbuilder-slack",
-  "version": "2.0.0",
-  "description": "Slack Connector for botbuilder. Compatibe with Microsoft Slack connector.",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "repository": "https://github.com/suttna/botbuilder-slack",
-  "author": "Martin Fernandez <fmartin91@gmail.com>",
-  "license": "MIT",
+  "name": "botkit-starter-slack",
+  "version": "0.0.2",
+  "description": "A starter kit for building a custom Slack bot with Botkit Studio",
+  "main": "bot.js",
   "scripts": {
-    "test": "jest --config jest.json --forceExit --runInBand --verbose",
-    "posttest": "codecov -f coverage/*.json",
-    "build": "yarn build:src",
-    "build:src": "tsc",
-    "build:tests": "tsc -p __tests__/tsconfig.json",
-    "docs": "typedoc src && touch docs/.nojekyll",
-    "watch": "tsc --watch",
-    "lint": "tslint 'src/**/*.ts' '__tests__/**/*.ts'",
-    "lint:fix": "tslint 'src/**/*.ts' '__tests__/**/*.ts' --fix",
-    "ci": "yarn lint && yarn build:src && yarn build:tests && yarn test",
-    "prepare": "yarn build",
-    "preversion": "yarn test",
-    "changelog": "bundle exec github_changelog_generator"
+    "start": "node bot.js"
   },
-  "keywords": [
-    "bot",
-    "node",
-    "botframework",
-    "botbuilder",
-    "slack",
-    "connector"
-  ],
   "dependencies": {
-    "@slack/client": "^3.13.0",
-    "botbuilder": "^3.9.1"
+    "body-parser": "^1.15.2",
+    "botkit": "^0.6.15",
+    "botkit-storage-mongo": "^1.0.6",
+    "botkit-studio-metrics": "^0.0.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.3.3",
+    "express": "^4.14.0",
+    "express-hbs": "^1.0.4",
+    "node-env-file": "^0.1.8",
+    "querystring": "^0.2.0",
+    "request": "^2.79.0",
+    "wordfilter": "^0.2.6"
   },
-  "devDependencies": {
-    "@types/bluebird": "3.5.20",
-    "@types/jest": "^22.2.0",
-    "@types/lodash": "^4.14.105",
-    "@types/nock": "9.1.1",
-    "@types/node": "9.4.3",
-    "@types/qs": "6.5.1",
-    "@types/ws": "4.0.0",
-    "codecov": "3.0.0",
-    "jest": "^22.4.0",
-    "nock": "9.1.6",
-    "ts-jest": "^22.4.1",
-    "tslint": "5.9.1",
-    "typedoc": "^0.11.1",
-    "typescript": "^2.7.2"
-  }
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/howdyai/botkit-starter-slack.git"
+  },
+  "bugs": {
+    "url": "https://github.com/howdyai/botkit-starter-slack/issues"
+  },
+  "homepage": "https://github.com/howdyai/botkit-starter-slack",
+  "keywords": [
+    "bots",
+    "chatbots",
+    "slack"
+  ],
+  "author": "ben@howdy.ai",
+  "license": "ISC"
 }
