--- a/example/package.json
+++ b/example/package.json
@@ -18,10 +18,12 @@
     "connector"
   ],
   "dependencies": {
+    "@slack/client": "^4.5.0",
     "body-parser": "^1.18.2",
     "botbuilder": "^3.9.1",
-    "botbuilder-slack": "file:../",
+    "botbuilder-slack": "^2.0.0",
     "express": "^4.16.1",
+    "node-env-file": "^0.1.8",
     "restify": "^6.0.0"
   },
   "devDependencies": {
